[package]
name = "lisbeth-error"
version = "0.1.0"
authors = ["Sasha Pourcelot <sasha.pourcelot@protonmail.com>"]
edition = "2018"
description = "Span handling, error generation and reporting crate"
documentation = "https://docs.rs/lisbeth-error"
readme = "README.md"
repository = "https://github.com/scrabsha/lisbeth"
license = "MIT"
categories = ["parsing-tools"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
